traefik.yaml
kind: Service
apiVersion: v1
metadata:
  name: traefik
spec:
  type: LoadBalancer
  ports:
  - port: 80
    name: http
  - port: 443
    name: https
  selector:
    app: traefik-ingress-lb
